[metadata]
name = speedling
summary = Rapid Insteallation Tool
description-file =
    README.rst

home-page = https://github.com/afazekas/speedling
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    speedling
    slos
    virtbs
